Terminate the PDF Converter utility process when done.

The PDF converter utility process would not terminate once printing was
done. Until it becomes a service, it needs to be instructed explicitly
to terminate.

Bug: 793854
Change-Id: I5ee985a90b051813e5313444232540268923302d